Fix: Fonts not showing in production

--- a/app/assets/stylesheets/font-path-overwrite.scss
+++ b/app/assets/stylesheets/font-path-overwrite.scss
@@ -1,2 +1,34 @@
-$fa-font-path: "font-awesome/fonts/";
+$fa-font-path: "font-awesome/fonts";
+
+@import 'font-awesome/scss/font-awesome';
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: font-url('#{$fa-font-path}/fontawesome-webfont.eot?v=#{$fa-version}');
+  src: font-url('#{$fa-font-path}/fontawesome-webfont.eot?#iefix&v=#{$fa-version}') format('embedded-opentype'),
+  font-url('#{$fa-font-path}/fontawesome-webfont.woff2?v=#{$fa-version}') format('woff2'),
+  font-url('#{$fa-font-path}/fontawesome-webfont.woff?v=#{$fa-version}') format('woff'),
+  font-url('#{$fa-font-path}/fontawesome-webfont.ttf?v=#{$fa-version}') format('truetype'),
+  font-url('#{$fa-font-path}/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular') format('svg');
+  //  src: url('#{$fa-font-path}/FontAwesome.otf') format('opentype'); // used when developing fonts
+  font-weight: normal;
+  font-style: normal;
+}
+
 $simple-line-font-path: "simple-line-icons/fonts/";
+
+@import 'simple-line-icons/scss/simple-line-icons';
+
+@if $simple-line-font-family == "simple-line-icons" {
+  @font-face {
+    font-family: '#{$simple-line-font-family}';
+    src:    font-url('#{$simple-line-font-path}Simple-Line-Icons.eot?v=2.4.0');
+    src:    font-url('#{$simple-line-font-path}Simple-Line-Icons.eot?v=2.4.0#iefix') format('embedded-opentype'),
+    font-url('#{$simple-line-font-path}Simple-Line-Icons.woff2?v=2.4.0') format('woff2'),
+    font-url('#{$simple-line-font-path}Simple-Line-Icons.ttf?v=2.4.0') format('truetype'),
+    font-url('#{$simple-line-font-path}Simple-Line-Icons.woff?v=2.4.0') format('woff'),
+    font-url('#{$simple-line-font-path}Simple-Line-Icons.svg?v=2.4.0#simple-line-icons') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+}
